# BVDownloader_Qt5

./: CMakeLists.txt  LICENSE  README.md  VoliDownload.pro  downloader.cc  downloader.cpp  downloader.h  downloader.hh  main.cc  mainwindow.cc  mainwindow.cpp  mainwindow.h  mainwindow.hh  mainwindow.ui  urllist.cc  urllist.cpp  urllist.h  urllist.hh  urllist.ui
